Fix vertical alignment when there's an empty slot

--- a/lot-ticket/app/css/app.css
+++ b/lot-ticket/app/css/app.css
@@ -42,6 +42,7 @@
 	box-sizing: content-box !important;
     line-height: 21px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+   	vertical-align: top;
 }
 
 .ball.selected {
